# urbanus

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Erick Carmem Mirela Transcript Feb 5 2026.txt  Makefile  README.md  URBANUS-DOCUMENTACAO-TECNICA.md  URBANUS_REFATORACAO_PIPELINE_DADOS.md  back-end-plan.md  dev.sh  docker-compose.yml  front-end-plan.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  turbo.json  vitest.workspace.ts
URBANUS-1.0.0/: config.py  main.py  (+3 more)
apps/api/: Dockerfile  README.md  alembic.ini  anotacoes.md  entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_remove_hydraulics_and_pumps.py
apps/api/src/urbanus_api/: elevation.py  main.py  models.py  nodes.py
apps/api/src/urbanus_api/core/: __init__.py
apps/api/src/urbanus_api/core/elevation/: __init__.py  extrema.py  sampling.py
apps/api/src/urbanus_api/core/graph/: __init__.py  accessories.py  builder.py  classification.py  coverage.py  sanitization.py
apps/api/src/urbanus_api/data/: __init__.py  database.py  repositories.py  tables.py
apps/api/src/urbanus_api/services/: elevation.py  overpass.py
apps/api/src/urbanus_api/workers/: __init__.py
apps/api/tests/: conftest.py  helpers.py
apps/api/tests/core/: test_accessories.py  test_builder.py  test_classification.py  test_cost.py  test_costing.py  test_cycle_guards.py  test_dimensioning.py  test_extrema.py  test_main_helpers.py  test_node_reduction.py  test_rsph.py  test_sanitization.py
apps/api/tests/services/: __init__.py  test_elevation.py
(+308 files in other folders)
