[project]
name = "urbanus-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic>=2",
  "rasterio",
  "numpy",
  "httpx",
  "urbanus-geo",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg",
  "geoalchemy2>=0.15",
  "alembic",
  "shapely>=2.0",
  "networkx>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
